# GenAI-USW-2026

./: .gitignore  ARCHITECTURE_ANALYSIS.md  MOODLE_API_DOCUMENTATION.md  README.md  easyopen.md  pyproject.toml  requirements.txt  test_file.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  career_agent.py  curriculum_agent.py  evaluator_agent.py  orchestrator.py  planner_agent.py  response_sources.py  tutor_agent.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  academic_event.py  attempt_answer.py  calendar_event.py  chat.py  curriculum.py  document.py  exam.py  focus_session.py  grade.py  language_progress.py  quiz.py  quiz_attempt.py  quiz_question.py  quiz_result.py  resume.py  study_plan.py
backend/tests/: conftest.py  test_agent_output_formatting.py  test_calendar_moodle_deadlines.py  test_career_groq_json_fallback.py  test_exams.py  test_history.py  test_llm_provider_fallback.py  test_lsf_mock.py  test_moodle.py  test_moodle_context_service.py  test_moodle_mock.py  test_profile_reset.py  test_prompt.py  test_rag_pipeline.py  test_rag_retriever.py  test_rag_store.py  test_rag_stubs.py  test_route_contracts.py  test_tutor_quiz_groq_json_fallback.py  test_tutor_routing.py  test_tutor_submit.py  test_upload.py
docs/: planner-agent-mvp.md  technical-system-report.md
documentation/: study-advisor.md
frontend/: .env  index.html  package-lock.json
frontend/src/: App.vue
(+44 files in other folders)
