[project]
name = "genai-usw-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.2.2",
    "pypdf>=5.0.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
